--- a/Evelynn/Evelynn/pEvelynn.csproj
+++ b/Evelynn/Evelynn/pEvelynn.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GameObjects.cs" />
+    <Compile Include="ImplementationClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Evelynn.cs" />
